body overflow changes when project modal is active, set fixed height of the project carousel

--- a/src/Sass/slideTransition.sass
+++ b/src/Sass/slideTransition.sass
@@ -8,7 +8,8 @@
     transform: translate(-30px)
 
 
-
+.slide-to-right-enter-active,
+.slide-to-right-leave-active,
 .slide-to-left-enter-active,
 .slide-to-left-leave-active
     transition: all 0.5s ease
@@ -18,12 +19,6 @@
     opacity: 0
     transform: translate(-30px)
 
-
-
-
-.slide-to-right-enter-active,
-.slide-to-right-leave-active
-    transition: all 0.5s ease
 
 .slide-to-right-enter-from,
 .slide-to-right-leave-to
